1999-08-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* OutputStream.m ([OutputStream_c -catLongLong:]): 
	Raise an error if no long long specifier is available (e.g. HPUX9).

1999-08-06  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* OutputStream.[hm], collections.h ([OutputStream_c
	-catPointer:]): New method.

1999-08-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* InputStream.m ([InputStream_c -getExpr]): Change strtol failure
	from error to warning.

	* Map.m ([Map_c -{hdf5,lisp}In:]): Use STRDUP instead of strdup.

1999-08-01  Alex Lancaster  <alex@santafe.edu>

	* collections.h (ForEachKey): New protocol.
	(KeyedCollection):  Adopt it.

	* Map.[hm] ([Map_c -{forEachKey:, forEachKey::, forEachKey:::,
	forEachKey::::}]): New methods to implement the `ForEachKey'
	protocol for Map.  Thanks to Alan Liu <alanl@santafe.edu> for the
	implementation.

	* Set.[hm]: Identical method functionality implemented for `Set'.
	
1999-07-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* OutputStream.m ([OutputStream_c -catLongLong:],
	[OutputStream_c -catUnsignedLongLong:]): Compose fmt from LLFMT
	for long long output.  When sizeof long and long long are the
	same, do a cast and use %l[ud].

1999-07-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* collections.h (_Set): Split out common Set features into
	subprotocol. (Set, OrderedSet): Adopt it. 

1999-07-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* collections.h (InputStream): Declare -setLong: and -getLong.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* InputStream.m ([InputStream_c -getExpr]): Default to _C_LNG 
	for numbers.
	([ArchiverArray_c -setArray:]): Check for _C_LNG instead of _C_INT.
	([ArchiverValue_c -lispOutDeep:]): Handle _C_LNG.

	* InputStream.[hm] ([ArchiverValue_c -setLong:], [ArchiverValue_c
	-getLong]): New methods.

	* InputStream.h (ArchiverValue_c): Add long type to value union.

	* InputStream.m ([InputStream_c -getExpr]): Remove disabled `nil'